[package]
name = "rustboy"
version = "0.1.0"
authors = ["Gil Mendes <gil00mendes@gmail.com>"]

[dependencies]
blip_buf = ">=0.1.3"
clap = "2.30.0"
cpal = "0.2"
sdl2 = "0.31"
glium_sdl2 = { git = "https://github.com/Gekkio/glium-sdl2.git", branch = "glium0.19-sdl0.31" }
imgui = "0.0.18"
imgui-glium-renderer = "0.0.18"
log = "0.4"
error-chain = "0.11"
bitflags = "1.0"
nalgebra = "0.14.0"
nom = "^3.2"

[dependencies.glium]
version = "0.19"
default-features = false

[[bin]]
name = "rustboy"
test = false
doc = false
